Updated i18n files (changed the text); updated the routet o go to 'home'; added a home controller

--- a/views/index.html
+++ b/views/index.html
@@ -51,6 +51,9 @@
 <script src="/app/authenticate/authenticate.js"></script>
 <script src="/app/authenticate/authenticateController.js"></script>
 
+<script src="/app/home/homeController.js"></script>
+
+
 <script src="/app/services/filters.js"></script>
 <script src="/app/services/directives.js"></script>
 
